[gcc] 2003-09-19  Ziemowit Laski  <zlaski@apple.com>

PR objc/12309
        * objc/objc-act.c (lookup_and_install_protocols): Exclude missing
        protocols from list instead of returning error_mark_node.

[gcc/testsuite]
2003-09-19  Ziemowit Laski  <zlaski@apple.com>

        PR objc/12262
        * objc.dg/method-12.m: New test.
        PR objc/12309
        * objc.dg/missing-proto-3.m: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/objc-improvements-branch@71593 138bc75d-0d04-0410-961f-82ee72b054a4